re PR middle-end/65735 (ICE (in duplicate_thread_path, at tree-ssa-threadupdate.c))

PR tree-optimization/65735
	* tree-ssa-threadedge.c (fsm_find_control_statement_thread_paths):
	Remove visited_phis argument, add visited_bbs, avoid recursing into the
	same bb rather than just into the same phi node.
	(thread_through_normal_block): Adjust caller.

	* gcc.c-torture/compile/pr65735.c: New test.

From-SVN: r222011